--- a/global.css
+++ b/global.css
@@ -1,35 +1,7 @@
-th, td      {
-               vertical-align: top;
-               text-align: right;
-               font-size:large;
-               // border: 1px solid black;
-            }     /* Don't center table cells  */
-#converted  {
-              color: red;
-              font-weight: bold;
-              font-size:large;
-            }     /* Calculated values in bold */
-
-input       {
-              text-align: right;       /* Align input to the right  */
-              border: none;
-              border-radius: 20px 20px 20px 20px;
-              padding: 5px  5px;
-              width: 50%;
-              font-size:large;
-            }
-body
-{
- background-color:#BCF5A9;
- font-size:large;
- font-family: "Lucida Sans Typewriter", "Lucida Console", Monaco, "Bitstream Vera Sans Mono", monospace;
-}
-
-h1 {
-    font-weight: normal;
-    text-align: center;
-    background: #0B610B;
-    padding: 5px 15px;
-    color: white;
-    border-radius: 10px 10px 10px 10px;
-}
+input,td,th{text-align:right;font-size:large}
+#converted,body,input,td,th{font-size:large}
+td,th{vertical-align:top;// border:1px solid #000}
+#converted{color:red;font-weight:700}
+input{border:none;border-radius:20px;padding:5px;width:50%}
+body{background-color:#BCF5A9;font-family:"Lucida Sans Typewriter","Lucida Console",Monaco,"Bitstream Vera Sans Mono",monospace}
+h1{font-weight:400;text-align:center;background:#0B610B;padding:5px 15px;color:#fff;border-radius:10px}
